# LocalPinyinIME

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/branding/: README.md
assets/branding/icon/: README.md
assets/branding/marketing/: README.md
assets/branding/theme/: local_pinyin_blue_theme.json
cmake/: LocalPinyinReleaseVersion.cmake  LocalPinyinVersion.h.in  LocalPinyinVersion.rc.in
docs/: AI_LEXICON_PATCH_PROMPT_zh-CN.md  INSTALL-zh-CN.md  LEXICON_SOURCES_POLICY.md  LOCAL_CORE_LEXICON_EDITING_GUIDE_zh-CN.md  LOCAL_LEXICON_POLICY.md  README-zh-CN.md  SECURITY-NOTES-zh-CN.md  TROUBLESHOOTING-zh-CN.md  UNINSTALL-zh-CN.md  architecture.md  build-guide.md  install-guide.md  known-limitations.md  tsf-notes.md  uninstall-guide.md
installer/: LocalPinyinIME.iss  README.md
resources/dictionary/: core_zh_pinyin.tsv  local_core_zh_pinyin.metadata.json  local_core_zh_pinyin.tsv
resources/dictionary/sources/: lexicon_sources.json
scripts/: Build-Installer.ps1  Build-Release.ps1  Install-LocalPinyinIME.ps1  LocalPinyinRelease.ps1  Test-GitHubPublishReadiness.ps1  Test-InstallerPackage.ps1  Test-ReleasePackage.ps1  Uninstall-LocalPinyinIME.ps1  Verify-LocalPinyinIME.ps1  build_debug.ps1  build_release.ps1  register_ime.ps1  unregister_ime.ps1
src/audit/: main.cpp
src/common/: logging.cpp  logging.h  utf_utils.cpp  utf_utils.h  win32_utils.cpp  win32_utils.h
src/enable/: main.cpp
src/engine/: candidate.h  candidate_ranker.cpp  candidate_ranker.h  candidate_selection.h  dictionary.cpp  dictionary.h  pinyin_engine.cpp  pinyin_engine.h  sqlite_database.cpp  sqlite_database.h  user_learning.cpp  user_learning.h  user_lexicon.cpp  user_lexicon.h
src/ime/: LocalPinyinIME.def  LocalPinyinIME.rc  candidate_ui.cpp  candidate_ui.h  candidate_window.cpp  candidate_window.h  class_factory.cpp  class_factory.h  composition_manager.cpp  composition_manager.h  dllmain.cpp  exports.cpp  globals.cpp  globals.h  guids.cpp  guids.h  input_mode.cpp  input_mode.h  key_event_sink.cpp  key_event_sink.h  language_bar.cpp  language_bar.h  preserved_key.h  registration.cpp  registration.h  resource.h  text_service.cpp  text_service.h  tsf_profile_categories.h
src/settings/: LocalPinyinSettings.rc  main.cpp  resource.h  settings_store.cpp  settings_store.h  settings_window.cpp  settings_window.h
src/setup/: main.cpp  verify_expected_dll.cpp  verify_expected_dll.h
src/tools/: dictionary_smoke.cpp
tests/: test_branding_assets.py  test_candidate_ranker.cpp  test_candidate_selection.cpp  test_candidate_ui.cpp  test_common.h  test_dictionary.cpp  test_dictionary_layers.cpp  test_dictionary_resource_layout.cpp  test_first_party_lexicon_audit.py  test_installer_static.py  test_lexicon_source_pipeline.py  test_logging.cpp  test_manage_user_lexicon.py  test_merge_local_core_lexicon_patch.py  test_pinyin_engine.cpp  test_preserved_key_registration.cpp  test_profile_icon_resource.py  test_registration_transaction.cpp  test_sentence_input_baseline.cpp  test_settings_store.cpp  test_settings_window_layout.cpp  test_tsf_category_registration_logic.cpp  test_user_learning.cpp  test_user_lexicon.cpp  test_verify_expected_dll.cpp
tools/: audit_first_party_lexicon.py  generate_brand_icon.py  generate_brand_theme_header.py  import_lexicon_source.py  manage_user_lexicon.py  merge_local_core_lexicon_patch.py  validate_local_core_lexicon.py
